--- a/_sass/mutor/_unit.scss
+++ b/_sass/mutor/_unit.scss
@@ -2,6 +2,8 @@ body {
     counter-reset: section;
     counter-reset: subsection;
     counter-reset: subsubsection;
+    counter-reset: figure;
+    counter-reset: table;
 }
 
 .unit-header {
@@ -113,9 +115,13 @@ body {
 	/* content: counter(section) "." counter(subsection) "." counter(subsubsection) "." counter(subsubsubsection) " "; */
     }
 
-    figure figcaption:before {
+    figure.image figcaption:before {
 	counter-increment: figure;
 	content: "Figure " counter(section) "." counter(figure) ": ";
+    }
+    figure.table figcaption:before {
+	counter-increment: table;
+	content: "Table " counter(section) "." counter(table) ": ";
     }
     figure figcaption {
 	text-align: center;
