--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,15 +16,33 @@
 	</span>
       </label>
       
-        <div class="trigger">
-          {%- for path in page_paths -%}
-            {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+      <div class="trigger">
+          <!-- {%- for path in page_paths -%} -->
+          <!--   {%- assign my_page = site.pages | where: "path", path | first -%} -->
+          <!--   {%- if my_page.title -%} -->
+          <!--   <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a> -->
 
-	  {%- endif -%}
+	  <!-- {%- endif -%} -->
+          <!-- {%- endfor -%} -->
+
+	  {%- for path in page_paths -%}
+            {%- assign my_page = site.pages | where: "path", path | first -%}
+            {%- if my_page.title == "About" -%}
+	      {%- assign about_page = my_page -%}
+	    {%- elsif my_page.title == "References" -%}
+	      {%- assign refs_page = my_page -%}
+	    {%- elsif my_page.title == "Discussion Questions" -%}
+	      {%- assign disq_page = my_page -%}
+	    {%- endif -%}
           {%- endfor -%}
+	  
 	  {% include unit_dropdown.html %}
+	  
+	  <a class="page-link" href="{{ disq_page.url | relative_url }}">{{ disq_page.title | escape }}</a>
+	  <a class="page-link" href="{{ refs_page.url | relative_url }}">{{ refs_page.title | escape }}</a>
+	  <a class="page-link" href="{{ about_page.url | relative_url }}">{{ about_page.title | escape }}</a>
+	  
+	  
 	</div>
       </nav>
     {%- endif -%}
