--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,9 @@
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+      <img src="/MUTOR/assets/images/mutor_logo_f1.png" alt="{{ site.title | escape }}" width=260 height=98>
+    </a>
 
     {%- if page_paths -%}
     <nav class="site-nav">
@@ -37,7 +39,6 @@
           {%- endfor -%}
 	  
 	  {% include unit_dropdown.html %}
-	  
 	  <a class="page-link" href="{{ disq_page.url | relative_url }}">{{ disq_page.title | escape }}</a>
 	  <a class="page-link" href="{{ refs_page.url | relative_url }}">{{ refs_page.title | escape }}</a>
 	  <a class="page-link" href="{{ about_page.url | relative_url }}">{{ about_page.title | escape }}</a>
