--- a/_sass/mutor/_base.scss
+++ b/_sass/mutor/_base.scss
@@ -25,6 +25,7 @@ body {
   font-kerning: normal;
   display: flex;
   min-height: 100vh;
+  min-width: 100vh;
   flex-direction: column;
 }
 
@@ -38,6 +39,7 @@ p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
   margin-bottom: $spacing-unit / 2;
+  // margin-left: $spacing-unit;
 }
 
 
@@ -178,7 +180,7 @@ pre {
   max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
   max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
   margin-right: auto;
-  margin-left: auto;
+  margin-left: 1vh;
   padding-right: $spacing-unit;
   padding-left: $spacing-unit;
   @extend %clearfix;
