--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,14 +2,15 @@
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+    <span class="site-title" rel="author" href="{{ "/" | relative_url }}">
       <img src="/MUTOR/assets/images/mutor_logo_f1.png" alt="{{ site.title | escape }}" width=260 height=98>
-    </a>
+    </span>
 
     {%- if page_paths -%}
-    <nav class="site-nav">
+    <span class="site-nav">
       <input type="checkbox" id="nav-trigger" class="nav-trigger" />
       <label for="nav-trigger">
+    
 	<span class="menu-icon">
 	  <svg viewBox="0 0 18 15" width="18px" height="15px">
 	                  <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.4\
@@ -45,7 +46,12 @@
 	  
 	  
 	</div>
-      </nav>
+</span>
+      <!--rel="author" href="{{ "/" | relative_url }}">-->
+  <span class="site-HfMT" rel="author" href="{{ "/" | relative_url }}">
+    <img src="/MUTOR/assets/images/hfmt_logo_black.png" alt="{{ site.title | escape }}" width=260 height=98>
+  </span>
+  
     {%- endif -%}
   </div>
 </header>
