--- a/_sass/mutor.scss
+++ b/_sass/mutor.scss
@@ -21,7 +21,7 @@ $grey-color-dark:  darken($grey-color, 25%) !default;
 $table-text-align: left !default;
 
 // Width of the content area
-$content-width:    100% !default;
+$content-width:    1280px !default;
 
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
