Menu Font Style
changed menu font style.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
       <span class="left"> 
         <a href ="{{ "/" | relative_url }}"><img src="/MUTOR/assets/images/mutor_logo_f1.png" alt="{{ site.title | escape }}" width="260px" height="98px">
       </span></a>
-      <span class="center">menu and links center</span>
+      <span class="center">Units Quiz References About</span>
       <span class="right"> 
         <a href ="https://www.hfmt-hamburg.de/start/"><img src="/MUTOR/assets/images/hfmt_logo_black.png" alt="{{ site.title | escape }}" width="50%" height="50%">
       </span></a>
