--- a/_sass/mutor/_base.scss
+++ b/_sass/mutor/_base.scss
@@ -23,7 +23,7 @@ body {
        -o-font-feature-settings: "kern" 1;
           font-feature-settings: "kern" 1;
   font-kerning: normal;
-  display: flex;
+  display: initial;
   min-height: 100vh;
   min-width: 100vh;
   flex-direction: column;
