--- a/_sass/mutor/_layout.scss
+++ b/_sass/mutor/_layout.scss
@@ -188,3 +188,121 @@ div.wrapper span.right {
     }
   }
 }
+
+/** 
+ * nav / dropdown menu
+ */
+.site-nav {
+    float: right;
+    line-height: $base-line-height * $base-font-size * 2.25;
+
+    .nav-trigger {
+	display: none;
+    }
+
+    .menu-icon {
+	display: none;
+    }
+
+    .page-link {
+	color: $text-color;
+	line-height: $base-line-height;
+
+	// Gaps between nav items, but not on the last one
+	&:not(:last-child) {
+	    margin-right: 20px;
+	}
+    }
+
+    @include media-query($on-palm) {
+	position: absolute;
+	top: 9px;
+	right: $spacing-unit / 2;
+	background-color: $background-color;
+	border: 1px solid $grey-color-light;
+	border-radius: 5px;
+	text-align: right;
+
+	label[for="nav-trigger"] {
+	    display: block;
+	    float: right;
+	    width: 36px;
+	    height: 36px;
+	    z-index: 2;
+	    cursor: pointer;
+	}
+
+	.menu-icon {
+	    display: block;
+	    float: right;
+	    width: 36px;
+	    height: 26px;
+	    line-height: 0;
+	    padding-top: 10px;
+	    text-align: center;
+
+	    > svg {
+		fill: $grey-color-dark;
+	    }
+	}
+
+	input ~ .trigger {
+	    clear: both;
+	    display: none;
+	}
+
+	input:checked ~ .trigger {
+	    display: block;
+	    padding-bottom: 5px;
+	}
+
+	.page-link {
+	    display: block;
+	    padding: 5px 10px;
+
+	    &:not(:last-child) {
+		margin-right: 0;
+	    }
+	    margin-left: 20px;
+	}
+    }
+
+    .dropbtn {
+	//background-color: #4CAF50;
+	//color: white;
+	//padding: 16px;
+	//font-size: 16px;
+	border: 1px 1px 1px 1px;
+	cursor: pointer;
+	font-size: $base-font-size;
+    }
+
+    .dropdown {
+	position: relative;
+	display: inline-block;
+	margin-right: 20px;
+    }
+
+    .dropdown-content {
+	display: none;
+	position: absolute;
+	right: 0;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+	line-height: ($base-line-height * .8) * $base-font-size;
+    }
+
+    .dropdown-content a {
+	color: black;
+	padding: $spacing-unit * .2;
+	text-decoration: none;
+	display: block;
+	font-size: $base-font-size * .9;
+    }
+
+    .dropdown-content a:hover {background-color: #f1f1f1;}
+    .dropdown:hover .dropdown-content {display: block;}
+    .dropdown:hover .dropbtn {background-color: #f1f1f1;}
+}
