--- a/_layouts/unit.html
+++ b/_layouts/unit.html
@@ -4,28 +4,72 @@ layout: default
 {% include mathjax.html %}
 
 <article class="unit">
-
-  <header class="unit-header">
-    <h1 class="unit-title">Unit {{ page.number }}: {{ page.title | escape }}</h1>
-    <dl>
-      <dt>Authors</dt>
-      <dl>{{ page.authors }}</dl>
-      <dt>Summary</dt>
-      <dl>{{ page.summary }}</dl>
-      <dt>Topics</dt>
-      <dl>
-	{% for t in page.topics %}
-	  {{ t }}
-	  {%- if forloop.last != true -%}
-	    ,
-	  {% endif %}
-	{% endfor %}
-      </dl>
-    </dl>
-  </header>
-  
-  <div class="unit-content">
-    {{ content }}
+  <div class="wrapper">
+    <header class="unit-header">
+      <h1 class="unit-title">Unit {{ page.number }}: {{ page.title | escape }}</h1>
+    </header>
+    
+    <div class="unit-main">
+      <div class="unit-content">
+	<a id="unit-top"></a>
+	{{ content }}
+	<script type="text/javascript">
+	  let pasttitle = 0;
+	  let toplink = document.createElement("a");
+	  toplink.setAttribute("href", "#unit-top");
+	  let h1s = document.querySelectorAll("h1");
+	  for(i = 0; i < h1s.length; i++){
+	      if(pasttitle == 0){
+		  if(h1s[i].getAttribute("class") == "unit-title"){
+		      i += 2;
+		      pasttitle = 1;
+		  }else{
+		      continue;
+		  }
+	      }
+	      let clone = toplink.cloneNode();
+	      clone.innerHTML = "(return to top)";
+	      let parent = h1s[i].parentNode;
+	      parent.insertBefore(clone, h1s[i]);
+	  }
+	</script>
+      </div>
+      <div class="unit-info-column">
+	<h1 class="unit-info-header">Authors</h1>
+	<span class="unit-info-content" id="unit-info-author">
+	  <ul>
+	    {% for a in page.authors %}
+	    <li>{{ a }}</li>
+	    {% endfor %}
+	  </ul>
+	</span>
+	
+	<h1 class="unit-info-header">Summary</h1>
+	<span class="unit-info-content" id="unit-info-summary">
+	  <ul>
+	    <li>{{ page.short_description }}</li>
+	  </ul>
+	</span>
+	
+	<h1 class="unit-info-header">Topics</h1>
+	<span class="unit-info-content" id="unit-info-topics">
+	  <ul>
+	    {% for t in page.topics %}
+	    <li>{{ t }}</li>
+	    {% endfor %}
+	  </ul>
+	</span>
+	
+	<h1 class="unit-info-header" id="unit-toc-header">Contents</h1>
+	<span class="unit-info-content" id="unit-toc-content"></span>
+	<script type="text/javascript">
+	  var toc = document.querySelector("#unit-toc");
+	  var copy = toc.cloneNode(true);
+	  copy.setAttribute('class', "unit-info-toc");
+	  var dest = document.querySelector("#unit-toc-content");
+	  dest.appendChild(copy);
+	</script>
+      </div>
+    </div>
   </div>
-
 </article>
