fixed broken page links in the menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -55,9 +55,9 @@
 	  <div class="burger-menu"></div>
 	  <div class="burger-menu"></div>
 	  <ul class="second-level-menu">
-	    <li><a class="page-link" href="{{ refs_page.url }}">{{ refs_page.title }}</a></li>
-	    <li><a class="page-link" href="{{ disq_page.url }}">{{ disq_page.title }}</a></li>
-	    <li><a class="page-link" href="{{ about_page.url }}">{{ about_page.title }}</a></li>
+	    <li><a class="page-link" href="/MUTOR{{ refs_page.url }}">{{ refs_page.title }}</a></li>
+	    <li><a class="page-link" href="/MUTOR{{ disq_page.url }}">{{ disq_page.title }}</a></li>
+	    <li><a class="page-link" href="/MUTOR{{ about_page.url }}">{{ about_page.title }}</a></li>
 	    <li>
 	      <a href="#">Units</a>
 	      <ul class="third-level-menu">
