updates to overall style: titles indented, menu moved to right of the logo, affiliation logos moved to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,35 +1,45 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-    footer
-{% comment %}
-    <!-- <h2 class="footer-heading">{{ site.title | escape }}</h2> -->
+    <span class="links">
+      <span class="wrapper">
+	<span class="footer-link">
+	  <a href="">Data Privacy</a>
+	</span>
+	<span class="footer-link">
+	  <a href="">Contact</a>
+	</span>
+      </span>
+    </span>
+    <span class="affiliation-logos">
+      <span class="wrapper">
+	<span class="affiliation-logo">
+	  <a href="https://www.hfmt-hamburg.de/start/">
+	    <img src="/MUTOR/assets/images/hfmt_logo_black.png" alt="{{ site.title | escape }}" height=48px>
+	  </a>
+	</span>
+	<span class="affiliation-logo">
+	  <a href="https://www.hoou.de/institutions/hochschule-fur-musik-und-theater">
+	    <img src="/MUTOR/assets/images/hoou_logo.png" alt="{{ site.title | escape }}" height=48px>
+	  </a>
+	</span>
+	<span class="affiliation-logo">
+	  <a href="https://music.neu.edu">
+	    <img src="/MUTOR/assets/images/nu_logo.png" alt="{{ site.title | escape }}" height=48px>
+	  </a>
+	</span>
+	<span class="affiliation-logo">
+	  <a href="https://berkeley.edu">
+	    <img src="/MUTOR/assets/images/ucb_logo.png" alt="{{ site.title | escape }}" height=48px>
+	  </a>
+	</span>
+	<span class="affiliation-logo">
+	  <a href="https://cnmat.berkeley.edu">
+	    <img src="/MUTOR/assets/images/cnmat_logo.png" alt="{{ site.title | escape }}" height=48px>
+	  </a>
+	</span>
+      </span>
+    </span>
 
-    <!-- <div class="footer-col-wrapper"> -->
-    <!--   <div class="footer-col footer-col-1"> -->
-    <!--     <ul class="contact-list"> -->
-    <!--       <li class="p-name"> -->
-    <!--         {%- if site.author -%} -->
-    <!--           {{ site.author | escape }} -->
-    <!--         {%- else -%} -->
-    <!--           {{ site.title | escape }} -->
-    <!--         {%- endif -%} -->
-    <!--         </li> -->
-    <!--         {%- if site.email -%} -->
-    <!--         <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li> -->
-    <!--         {%- endif -%} -->
-    <!--     </ul> -->
-    <!--   </div> -->
-
-    <!--   <div class="footer-col footer-col-2"> -->
-    <!--     {%- include social.html -%} -->
-    <!--   </div> -->
-
-    <!--   <div class="footer-col footer-col-3"> -->
-    <!--     <p>{{- site.description | escape -}}</p> -->
-    <!--   </div> -->
-    <!-- </div> -->
-{% endcomment %}
   </div>
-
 </footer>
