--- a/_sass/mutor/_base.scss
+++ b/_sass/mutor/_base.scss
@@ -9,6 +9,8 @@ $global-font-family: Helvetica, Arial, sans-serif;
 $global-font-size: 16px;
 $global-font-weight: 400;
 
+$global-title-indent: 100px;
+
 body {
     max-width: $global-max-width;
     margin: auto;
