--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,9 @@ layout: default
 ---
 
 <div class="home">
-  <header class = "home-header">
-    <h1 class="home-title">{{ page.title | escape }}</h1>
+  <!-- <header class = "home-header"> -->
+  <!--   <h1 class="home-title">{{ page.title | escape }}</h1> -->
+  <!-- </header> -->
   <div class="home-content">
     {{ content }}
   </div>
