--- a/_includes/mutor_audiolib.html
+++ b/_includes/mutor_audiolib.html
@@ -5,16 +5,20 @@
 	      const samps = buffer.getChannelData(0);
 	      let c = canvas;
 	      let ctx = c.getContext("2d");
-	      const width = c.getAttribute("width");
-	      const height = c.getAttribute("height");
+	      const width = parseFloat(c.getAttribute("width"));
+	      const height = parseFloat(c.getAttribute("height"));
 	      let samps_per_pixel = Math.floor(samps.length / width);
 	      ctx.moveTo(0, height / 2);
 	      for(x = 0; x < width; x++){
-		  let y = 0;
+		  let y = 0;//, yy = 0;
 		  for(i = 0; i < samps_per_pixel; i++){
-		      y += samps[i + (samps_per_pixel * x)];
+		      //yy += samps[i + (samps_per_pixel * x)];
+		      y += Math.pow(samps[i + (samps_per_pixel * x)], 2.);
 		  }
-		  y /= samps_per_pixel;
+		  y = Math.sqrt(y / samps_per_pixel);
+		  if(x % 2){
+		      y *= -1;
+		  }
 		  y = y * (height / 2.) + (height / 2.);
 		  ctx.lineTo(x, y);
 	      }
