added a div around audio examples to center them

--- a/_sass/mutor/_audio.scss
+++ b/_sass/mutor/_audio.scss
@@ -1,3 +1,12 @@
+.audio-example {
+    // text-align: center;
+    // display: block;
+    // margin: auto;
+    // width: 100%;
+    display: table;
+    margin: 0 auto;
+}
+
 .audio-transport {
     font-size: 12px;
     display: table-cell;
