--- a/_sass/mutor/_unit.scss
+++ b/_sass/mutor/_unit.scss
@@ -30,6 +30,7 @@ body {
 	width: 100%;
 	table-layout: fixed;
 	height: auto;
+	position: relative;
 	
 	// for debugging layout
 	//border: 1px solid $global-delim-color;
