fixed off-by-one error on figure numbers, fixed the ordering of units 11-12, and adjusted footer affiliation logos

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,11 +18,11 @@
 	    <img src="/MUTOR/assets/images/nu_logo.png" alt="{{ site.title | escape }}" height=48px>
 	  </a>
 	</span>
-	<span class="affiliation-logo">
-	  <a href="https://berkeley.edu">
-	    <img src="/MUTOR/assets/images/ucb_logo.png" alt="{{ site.title | escape }}" height=48px>
-	  </a>
-	</span>
+	<!-- <span class="affiliation-logo"> -->
+	<!--   <a href="https://berkeley.edu"> -->
+	<!--     <img src="/MUTOR/assets/images/ucb_logo.png" alt="{{ site.title | escape }}" height=48px> -->
+	<!--   </a> -->
+	<!-- </span> -->
 	<span class="affiliation-logo">
 	  <a href="https://cnmat.berkeley.edu">
 	    <img src="/MUTOR/assets/images/cnmat_logo.png" alt="{{ site.title | escape }}" height=48px>
@@ -35,7 +35,7 @@
 	</span>
 	<span class="affiliation-logo">
 	  <a href="https://www.hfmt-hamburg.de/start/">
-	    <img src="/MUTOR/assets/images/hfmt_logo_black.png" alt="{{ site.title | escape }}" height=52px>
+	    <img src="/MUTOR/assets/images/hfmt_logo_black.png" alt="{{ site.title | escape }}" height=80px>
 	  </a>
 	</span>
       </span>
