--- a/_sass/mutor/_audio.scss
+++ b/_sass/mutor/_audio.scss
@@ -11,9 +11,9 @@
     font-size: 12px;
     display: table-cell;
     vertical-align: top;
-    background-color: #000000;
-    color: transparent;
-    text-shadow: 0 0 0 #FFFFFF;
+    //background-color: #FFFFFF;
+    // color: transparent;
+    // text-shadow: 0 0 0 #FFFFFF;
     box-shadow: none;
     border: none;
 }
