--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,11 @@ layout: default
 <article class="page">
 
   <header class="page-header">
-    <h1 class="page-title">{{ page.title | escape }}</h1>
+    <span class="header-pre-pre-wrapper"><span class="header-pre-pre"></span></span>
+    <span class="header-pre-wrapper"><span class="header-pre"></span></span>
+    <span class="header"><h1 class="page-title">{{ page.title | escape }}</h1></span>
+    <span class="header-post-wrapper"><span class="header-post"></span></span>
+    <span class="header-post-post-wrapper"><span class="header-post-post"></span></span>
   </header>
 
   <div class="page-content">
