--- a/_layouts/unit.html
+++ b/_layouts/unit.html
@@ -6,7 +6,11 @@ layout: default
 <article class="unit">
   <div class="wrapper">
     <header class="unit-header">
-      <h1 class="unit-title">Unit {{ page.number }}: {{ page.title | escape }}</h1>
+      <span class="header-pre-pre-wrapper"><span class="header-pre-pre"></span></span>
+      <span class="header-pre-wrapper"><span class="header-pre"></span></span>
+      <span class="header"><h1 class="unit-title">Unit {{ page.number }}: {{ page.title | escape }}</h1></span>
+      <span class="header-post-wrapper"><span class="header-post"></span></span
+      <span class="header-post-post-wrapper"><span class="header-post-post"></span></span>
     </header>
     
     <div class="unit-main">
