--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,8 @@ layout: default
 
   <header class="page-header">
     <span class="header-pre-pre-wrapper"><span class="header-pre-pre"></span></span>
-    <span class="header-pre-wrapper"><span class="header-pre"></span></span>
+    <!-- <span class="header-pre-wrapper"><span class="header-pre"></span></span> -->
+    <span class="header-pre-wrapper"><span class="header-pre"><div class="arrow-right"></div></span></span>
     <span class="header"><h1 class="page-title">{{ page.title | escape }}</h1></span>
     <span class="header-post-wrapper"><span class="header-post"></span></span>
     <span class="header-post-post-wrapper"><span class="header-post-post"></span></span>
