further refactoring and renaming of audio lib

--- a/_sass/mutor/_audio.scss
+++ b/_sass/mutor/_audio.scss
@@ -1,4 +1,4 @@
-.audio-example {
+.mutor-patch {
     // text-align: center;
     // display: block;
     // margin: auto;
@@ -7,7 +7,7 @@
     margin: 0 auto;
 }
 
-.audio-transport {
+.mutor-patch-transport {
     font-size: 12px;
     display: table-cell;
     vertical-align: top;
