--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,10 +4,10 @@
     <span class="links">
       <span class="wrapper">
 	<span class="footer-link">
-	  <a href="">Data Privacy</a>
+	  <a href="/MUTOR/privacy">Data Privacy</a>
 	</span>
 	<span class="footer-link">
-	  <a href="">Contact</a>
+	  <a href="/MUTOR/contact">Contact</a>
 	</span>
       </span>
     </span>
