--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,66 +24,74 @@
 	document.getElementById("myNav").style.height = "0%";
     }
   </script>
-  <div class="wrapper">
-    <span class="mutor-logo"> 
-      <a href ="{{ "/" | relative_url }}"><img src="/MUTOR/assets/images/mutor_logo_f1.png" alt="{{ site.title | escape }}" width="260px" height="98px"></a>
-    </span>
-
-    <nav class="site-nav">
-      <div id="overlay" class="overlay">
-	<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-	<div class="overlay-content">
-	  <ul class="top-level-menu">
-	    <li>
-	      <a class="page-link" href="">Units</a>
-    	      <ul class="second-level-menu" id="third-level-menu">
-    		{% for u in site.units %}
-    		<li><a href="{{ site.baseurl }}{{ u.url }}">Unit {{ u.number }}: {{ u.title }}</a></li>
-    		{% if forloop.last == false %}
-    		{% endif %}
-    		{% endfor %}
+  <div class="header-left">
+    <span class="header-left-content">
+      <span class="mutor-logo"> 
+	<a href ="{{ "/" | relative_url }}"><img src="/MUTOR/assets/images/mutor_logo_f1.png" alt="{{ site.title | escape }}" width="260px" height="98px"></a>
+      </span>
+      <span class="menu">
+	<nav class="site-nav">
+	  <div id="overlay" class="overlay">
+	    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+	    <div class="overlay-content">
+	      <ul class="top-level-menu">
+		<li>
+		  <a class="page-link" href="">Units</a>
+    		  <ul class="second-level-menu" id="third-level-menu">
+    		    {% for u in site.units %}
+    		    <li><a href="{{ site.baseurl }}{{ u.url }}">Unit {{ u.number }}: {{ u.title }}</a></li>
+    		    {% if forloop.last == false %}
+    		    {% endif %}
+    		    {% endfor %}
+    		  </ul>
+    		</li>
+		<li class="sep"><span class="sep-space"></span><span class="sep-line"></span><span class="sep-space"></span></li>
+    		<li><a class="page-link" href="/MUTOR{{ refs_page.url }}">{{ refs_page.title }}</a></li>
+		<li class="sep"><span class="sep-space"></span><span class="sep-line"></span><span class="sep-space"></span></li>
+    		<li><a class="page-link" href="/MUTOR{{ disq_page.url }}">{{ disq_page.title }}</a></li>
+		<li class="sep"><span class="sep-space"></span><span class="sep-line"></span><span class="sep-space"></span></li>
+    		<li><a class="page-link" href="/MUTOR{{ about_page.url }}">{{ about_page.title }}</a></li>
+		<li class="sep"><span class="sep-space"></span><span class="sep-line"></span><span class="sep-space"></span></li>
+		<li><a class="page-link" href="/MUTOR{{ team_page.url }}">{{ team_page.title }}</a></li>
+		<li class="sep"><span class="sep-space"></span><span class="sep-line"></span><span class="sep-space"></span></li>
     	      </ul>
-    	    </li>
-	    <li class="sep"><span class="sep-space"></span><span class="sep-line"></span><span class="sep-space"></span></li>
-    	    <li><a class="page-link" href="/MUTOR{{ refs_page.url }}">{{ refs_page.title }}</a></li>
-	    <li class="sep"><span class="sep-space"></span><span class="sep-line"></span><span class="sep-space"></span></li>
-    	    <li><a class="page-link" href="/MUTOR{{ disq_page.url }}">{{ disq_page.title }}</a></li>
-	    <li class="sep"><span class="sep-space"></span><span class="sep-line"></span><span class="sep-space"></span></li>
-    	    <li><a class="page-link" href="/MUTOR{{ about_page.url }}">{{ about_page.title }}</a></li>
-	    <li class="sep"><span class="sep-space"></span><span class="sep-line"></span><span class="sep-space"></span></li>
-	    <li><a class="page-link" href="/MUTOR{{ team_page.url }}">{{ team_page.title }}</a></li>
-	    <li class="sep"><span class="sep-space"></span><span class="sep-line"></span><span class="sep-space"></span></li>
-    	  </ul>
-	</div>
-      </div>
+	    </div>
+	  </div>
 
-      <span class="burger-menu" onclick="openNav()">&#9776;</span>
+	  <span class="burger-menu" onclick="openNav()">&#9776;</span>
 
-      <script>
-	function openNav() {
-	    let color = MUTOR.rbright();
-	    let e = document.getElementById("third-level-menu");
-	    e.style["background-color"] = color;
-	    e = document.getElementsByTagName("BODY");
-	    e[0].style["overflow"] = "hidden";
-	    e = document.getElementById("overlay");
-	    e.style["position"] = "fixed";
-	    e.style["overflow-y"] = "auto";
-	    e = document.getElementById("overlay");
-	    e.style["background-color"] = color;
-	    e.style.height = "100%";
-	}
+	  <script>
+	    function openNav() {
+		let color = MUTOR.rbright();
+		let e = document.getElementById("third-level-menu");
+		e.style["background-color"] = color;
+		e = document.getElementsByTagName("BODY");
+		e[0].style["overflow"] = "hidden";
+		e = document.getElementById("overlay");
+		e.style["position"] = "fixed";
+		e.style["overflow-y"] = "auto";
+		e = document.getElementById("overlay");
+		e.style["background-color"] = color;
+		e.style.height = "100%";
+	    }
 
-	function closeNav() {
-	    let e = document.getElementsByTagName("BODY");
-	    e[0].style["overflow"] = "auto";
-	    e = document.getElementById("overlay");
-	    e.style["overflow"] = "hidden";
-	    e = document.getElementById("overlay");
-	    e.style.height = "0%";
-	}
-      </script>
-    </nav>
-    
+	    function closeNav() {
+		let e = document.getElementsByTagName("BODY");
+		e[0].style["overflow"] = "auto";
+		e = document.getElementById("overlay");
+		e.style["overflow"] = "hidden";
+		e = document.getElementById("overlay");
+		e.style.height = "0%";
+	    }
+	  </script>
+	</nav>
+      </span> <!-- menu -->
+    </span> <!-- header-left-content -->
   </div>
+  <div class="header-right">
+    <span class="header-right-content">
+      <span class="mutor-search-field">{% include search %}</span>
+    </span>
+  </div>
+  
 </header>
