changes to the spectroscope code to make it scale better. added a small waveform + spectroscope display. refactored the lib into a js file and the wrapper that just includes it

--- a/_sass/mutor/_page.scss
+++ b/_sass/mutor/_page.scss
@@ -7,4 +7,12 @@
     font-weight: $global-font-weight;
 
     position: relative;
+
+    .page-content {
+	padding-left: 100px;
+    }
+    .page-content h1, h2, h3, h4, h5, h6 {
+	font-style: oblique;
+	
+    }
 }
